--- a/ftc.tex
+++ b/ftc.tex
@@ -1365,7 +1365,7 @@ experiments conducted on FutureGrid, which is supported by NSF under grant Futur
 \bibliographystyle{elsarticle-num}
 \bibliography{biblio}
 
-\begin{IEEEbiography}[{\includegraphics[width=1in,height=1.25in,clip,keepaspectratio]{weiwei.eps}}]{Weiwei Chen} is a Ph.D. candidate in the Dept. of Computer Science, University of Southern California, USA. In 2009, he completed his bachelor in the Dept. of Automation, Tsinghua University, China and he received his Master's degree in Computer Science from University of Southern California in 2012. He is currently working on task clustering in scientific workflows. His research interests include distributed computing, services computing and data analysis. 
+\begin{IEEEbiography}[{\includegraphics[width=1in,height=1.25in,clip,keepaspectratio]{weiwei.eps}}]{Weiwei Chen} is a Ph.D. candidate in the Dept. of Computer Science, University of Southern California, USA. In 2009, he completed his bachelor in the Dept. of Automation, Tsinghua University, China. He is currently working on task clustering in scientific workflows. His research interests include distributed computing, services computing and data analysis. 
 \end{IEEEbiography}
 % insert where needed to balance the two columns on the last page with
 % biographies
@@ -1378,11 +1378,11 @@ experiments conducted on FutureGrid, which is supported by NSF under grant Futur
 
 %\newpage
 
-\begin{IEEEbiography}[{\includegraphics[width=1in,height=1.25in,clip,keepaspectratio]{deelman.eps}}]{Ewa Deelman} is a Research Associate Professor at the USC Computer Science Department and a Assistant Division Director at the USC Information Sciences Institute. Her research interests include the design and exploration of collaborative, distributed scientific environments, with particular emphasis on workflow management as well as the management of large amounts of data and metadata. She received her PhD in Computer Science from the Rensselaer Polytechnic Institute in 1997. 
+\begin{IEEEbiography}[{\includegraphics[width=1in,height=1.25in,clip,keepaspectratio]{deelman.eps}}]{Ewa Deelman} is a Research Associate Professor at the USC Computer Science Department and a Assistant Division Director at the USC Information Sciences Institute. Her research interests include the design and exploration of distributed scientific environments, with emphasis on workflow management. She received her PhD in Computer Science from the Rensselaer Polytechnic Institute in 1997. 
 \end{IEEEbiography}
 
 
-\begin{IEEEbiography}[{\includegraphics[width=1in,height=1.25in,clip,keepaspectratio]{thomas.eps}}]{Thomas Fahringer} received the Ph.D. degree in 1993 from the Vienna University of Technology. Between 1990 and 1998, he worked as an assistant professor at the University of Vienna, where he was promoted as an associate professor in 1998. Since 2003, he has been a full professor of computer science in the Institute of Computer Science, University of Innsbruck, Austria. His main research interests include software architectures, programming paradigms, compiler technology, performance analysis, and prediction for parallel and distributed systems. 
+\begin{IEEEbiography}[{\includegraphics[width=1in,height=1.25in,clip,keepaspectratio]{thomas.eps}}]{Thomas Fahringer} received the Ph.D. degree in 1993 from the Vienna University of Technology. Since 2003, he has been a full professor of computer science in the Institute of Computer Science, University of Innsbruck, Austria. His main research interests include software architectures, programming paradigms, compiler technology, performance analysis, and prediction for parallel and distributed systems. 
 \end{IEEEbiography}
 
 
