Attempt to reduce the number of pages.

--- a/biblio.bib
+++ b/biblio.bib
@@ -27,10 +27,11 @@
 
 @inproceedings{yigitbasi2010analysis,
   title={Analysis and modeling of time-correlated failures in large-scale distributed systems},
-  author={Yigitbasi, Nezih and Gallet, Matthieu and Kondo, Derrick and Iosup, Alexandru and Epema, Dick},
   booktitle={2010 11th IEEE/ACM International Conference on Grid Computing (GRID)},
   pages={65--72},
   year={2010},
+  author={Yigitbasi, Nezih and et al.},
+%  author={Yigitbasi, Nezih and Gallet, Matthieu and Kondo, Derrick and Iosup, Alexandru and Epema, Dick},
 }
 
 @inproceedings{da2013toward,
@@ -59,7 +60,8 @@
 
 @inproceedings{schuller2008chemomentum,
   title={Chemomentum-UNICORE 6 based infrastructure for complex applications in science and technology},
-  author={Schuller, Bernd and Demuth, Bastian and Mix, Hartmut and Rasch, Katharina and Romberg, Mathilde and Sild, Sulev and Maran, Uko and Ba{\l}a, Piotr and Del Grosso, Enrico and Casalegno, Mos{\'e} and others},
+%  author={Schuller, Bernd and Demuth, Bastian and Mix, Hartmut and Rasch, Katharina and Romberg, Mathilde and Sild, Sulev and Maran, Uko and Ba{\l}a, Piotr and Del Grosso, Enrico and Casalegno, Mos{\'e} and others},
+  author={Schuller, Bernd and et al.},
   booktitle={Euro-Par 2007 Workshops: Parallel Processing},
   pages={82--93},
   year={2008},
@@ -710,7 +712,6 @@ pages={86-93},
   year = {2010},
   volume = {6081},
   series = {LNCS},
-  pages = {266-277}
 }
 @INPROCEEDINGS{4493929,
   author = {Muthuvelu, N. and Chai, I. and Eswaran, C.},
@@ -723,9 +724,10 @@ pages={86-93},
 }
 @inproceedings{Muthuvelu2005,
 	title={A Dynamic Job Grouping-Based Scheduling for Deploying Applications with Fine-Grained Tasks on Global Grids},
-	author={Nithiapidary Muthuvelu and Junyang Liu and Nay Lin Soe and Srikumar Venugopal and Anthony Sulistio and Rajkumar Buyya},
 	year={2005},
-	booktitle={2005 Australasian workshop on Grid computing and e-research},
+	booktitle={Australasian workshop on Grid computing and e-research},
+	author={Nithiapidary Muthuvelu and et al.},	
+%	author={Nithiapidary Muthuvelu and Junyang Liu and Nay Lin Soe and Srikumar Venugopal and Anthony Sulistio and Rajkumar Buyya},	
 },
 
 @inproceedings{Integration2012,
@@ -800,12 +802,12 @@ pages={86-93},
 },
 
 @inproceedings{Maheshwari2012,
- author = {Maheshwari, Ketan and Espinosa, Allan and Katz, Daniel S. and Wilde, Michael and Zhang, Zhao and Foster, Ian and Callaghan, Scott and Maechling, Phillip},
  title = {Job and data clustering for aggregate use of multiple production cyberinfrastructures},
  booktitle = {fifth international workshop on Data-Intensive Distributed Computing Date},
- series = {DIDC '12},
  year = {2012},
- pages = {3--12},
+ author = {Maheshwari, Ketan and et al.},
+% author = {Maheshwari, Ketan and Espinosa, Allan and Katz, Daniel S. and Wilde, Michael and Zhang, Zhao and Foster, Ian and Callaghan, Scott and Maechling, Phillip},
+
 },
 
 @article{Malawski2012,
@@ -1422,14 +1424,15 @@ pages={389 -400},
 },
 
 @article{Calheiros2011,
-    author = {Calheiros, Rodrigo N. and Ranjan, Rajiv and Beloglazov, Anton and De Rose, César A. F. and Buyya, Rajkumar},
     title = {{CloudSim:} a toolkit for modeling and simulation of cloud computing environments and evaluation of resource provisioning algorithms},
     journal = {Software: Practice and Experience},
     volume = {41},
     number = {1},
     month = jan,
     year = {2011},
-    pages = {23--50}
+    pages = {23--50},
+   author = {Calheiros, Rodrigo N. and et al.},
+%            author = {Calheiros, Rodrigo N. and Ranjan, Rajiv and Beloglazov, Anton and De Rose, César A. F. and Buyya, Rajkumar},
 },
 
 @inproceedings{Callaghan2008,
